--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/images/Abiolaedited.jpg" alt="Habeeb Abiola" /></td>
+      <td><img src="/HTML - Personal Site/images/Abiolaedited.jpg" alt="Habeeb Abiola" /></td>
       <td> <h1>Habeeb Abiola</h1>
         <p><em>IT Support officer at SHEKINAH COMPREHENSIVE COLLEGE</em></p>
         <p><em>IT Departmet</em></p>
