--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Habeeb Abiola Homepage</title>
+  <title>Abiola Habeeb Website</title>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/HTML - Personal Site/images/Abiolaedited.jpg" alt="Habeeb Abiola" /></td>
-      <td> <h1>Habeeb Abiola</h1>
-        <p><em>IT Support officer at SHEKINAH COMPREHENSIVE COLLEGE</em></p>
+      <td><img src="./images/Abiolaedited.jpg" alt="Habeeb Abiola" /></td>
+      <td> <h1>Abiola Habeeb</h1>
+        <p><em>IT Support Specialist at SHEKINAH COMPREHENSIVE COLLEGE</em></p>
         <p><em>IT Departmet</em></p>
         <p><em>University of Ibadan</em></p>
-        <p><em><a href="https://www.appbrewery.co">Learning via appbrewery</a></em></p></td>
+        <p><em><a href="www.linkedin.com/in/abiolahabeeb">linkedin</a></em></p></td>
     </tr>
   </table>
   <hr \>
@@ -25,12 +25,12 @@
       <th>Profile</th>
     </tr>
     <tr>
-      <td>2010-2013</td>
+      <td>2010 - 2013</td>
       <td>Lead Developer at Tempo App</td>
     </tr>
     <tr>
-      <td>2010-</td>
-      <td>Research at The Institute of Cognitive Neurosciences</td>
+      <td>2010 - <em>Present</em></td>
+      <td>Cloud Engineer & Web Development</td>
     </tr>
   </table>
 
